# wprcontrol

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.metadata/: generate.proj  main.cpp  options.rsp
.windows/winmd/: Microsoft.WPRControl.winmd
src/: bindings.rs  lib.rs
